Fixed a bug with calling formatDate.

--- a/craft/templates/_core/_partials/components/teasers/featuredArticleTeaser.html
+++ b/craft/templates/_core/_partials/components/teasers/featuredArticleTeaser.html
@@ -15,7 +15,7 @@
 
 		<div class="featured-article-teaser__body">
 			<div class="featured-article-teaser__body-inner">
-				<span class="teaser__date">{{ macros.formatDate(article.postDate) }}</span>
+				<span class="teaser__date">{{ core.formatDate(article.postDate) }}</span>
 				<{{ headingSize }} class="teaser__title">{{ article.title }}</{{ headingSize }}>
 				<span class="teaser__summary">{{ article.teaserStatement }}</span>
 			</div>
