--- a/craft/templates/_core/_partials/components/teasers/job.html
+++ b/craft/templates/_core/_partials/components/teasers/job.html
@@ -2,7 +2,7 @@
 	<div class="job-teaser__body">
 		<h2 class="job-teaser__title">{{ job.title }}</h2>
 		<span class="job-teaser__summary">{{ job.jobTeaser }}</span>
-		<span class="job-teaser__deadline">Deadline: {{ macros.formatDate(job.expiryDate) }}</span>
+		<span class="job-teaser__deadline">Deadline: {{ core.formatDate(job.expiryDate) }}</span>
 		<span class="job-teaser__cta link-out-icon icon icon--link--white"></span>
 	</div>
 </a>
