--- a/craft/templates/_core/_partials/components/teasers/article.html
+++ b/craft/templates/_core/_partials/components/teasers/article.html
@@ -17,7 +17,7 @@
 
 		<div class="teaser__body">
 			<div class="teaser__body-inner">
-				{% if showDate %}<span class="teaser__date">{{ macros.formatDate(article.postDate) }}</span>{% endif %}
+				{% if showDate %}<span class="teaser__date">{{ core.formatDate(article.postDate) }}</span>{% endif %}
 	    		<{{ headingSize }} class="teaser__title">{{ article.title }}</{{ headingSize }}>
 	    		<span class="teaser__summary">{{ article.teaserStatement }}</span>
 			</div>
