Clearfix is now a real class. Also added the get-color function.

--- a/src/assets/scss/_core/base/utils/_functions.scss
+++ b/src/assets/scss/_core/base/utils/_functions.scss
@@ -87,3 +87,19 @@ Text Colour Picker
 	}
 
 }
+
+
+
+
+
+
+
+
+
+/*
+Get Color
+Returns a specific theme colour from the map $theme.
+*/
+@function get-color($id, $theme) {
+	@return map-get(map-get($color-schemes, $id), $theme);
+}
