Added ready() to core.js, added .list-reset as a real class.

--- a/src/assets/scss/_core/base/utils/_helpers.scss
+++ b/src/assets/scss/_core/base/utils/_helpers.scss
@@ -28,7 +28,8 @@ Clearfix
 List reset
 The common task of zeroing out a list
 */
-%list-reset {
+%list-reset,
+.list-reset {
 	list-style: none;
 	margin: 0;
 	padding: 0;
