Links no longer are black by default.

--- a/src/assets/scss/base/project/_typography.scss
+++ b/src/assets/scss/base/project/_typography.scss
@@ -83,8 +83,7 @@ body {
 }
 
 a {
-    @include transition(color, 'lion');
-    color: $color-text-dark;
+    @include transition(color, 'hover');
 }
 
 li {
