Added a loop for .f_ classes.

--- a/src/assets/scss/base/project/_typography.scss
+++ b/src/assets/scss/base/project/_typography.scss
@@ -1,9 +1,5 @@
 /*
     Typography.
-    This is where you define your abstracted type styles used within the project,
-	prefixed with %type-
-    You can then extend these classes from your styles, maintaining consistency
-    of type throughout the project.
 */
 
 /*
@@ -69,6 +65,26 @@ $type-sizes: ();
 
 
 
+
+
+
+
+// Loop through fonts to create font classes.
+@each $key, $style in $type-styles {
+  .f_#{$key} {
+    @include type($key);
+  }
+
+  @if map-has-key($style, '_variants') {
+    $variants: map-get($style, '_variants');
+
+    @each $v_key, $v_value in $variants {
+      .f_#{$key}--#{$v_key} {
+        @include type($key, null, $v_key);
+      }
+    }
+  }
+}
 
 
 
