--- a/src/assets/scss/_core/components/_wysiwyg.scss
+++ b/src/assets/scss/_core/components/_wysiwyg.scss
@@ -2,7 +2,7 @@
 	WYSIWYG content.
 	Custom type styles applied to wysiwyg content from the CMS.
 */
-.wysiwyg-content {
+.wysiwyg {
 
 	p:first-child {
 		margin-top: 0;
