New which breakpoint method; more futureproof.

--- a/craft/templates/_core/_partials/structure/footer.html
+++ b/craft/templates/_core/_partials/structure/footer.html
@@ -3,6 +3,7 @@
 		css is loaded to avoid conflicts.
 		#}
 		<span class="visuallyhidden loadcss-check js-loadcss-check">main.css loaded.</span>
+		<span class="u_visuallyhidden which-breakpoint"></span>
 		<script>
 			{% include '_partials/snippets/fontfaceobserver.js' %}
 			{% include '_partials/snippets/loadcss.js' %}
