Now using Imager for transforms, and base64 encoded placeholder image for lazyload images.

--- a/craft/templates/_core/_layouts/default.html
+++ b/craft/templates/_core/_layouts/default.html
@@ -9,6 +9,8 @@
 	"mouse" : 0
 } %}
 
+{% set defaultPlaceholderColor = '#f1f1f1' %}
+
 {% set isHomepage = (entry is defined ? entry.section.isHomepage() : false) %}
 
 {% if not craft.request.isAjax %}
