Now you can optionally have an image be retina, with device pixel ratios specified in _layout.

--- a/craft/templates/_core/_layouts/default.html
+++ b/craft/templates/_core/_layouts/default.html
@@ -11,6 +11,8 @@
 
 {% set defaultPlaceholderColor = '#f1f1f1' %}
 
+{% set defaultPixelRatios = [1, 2] %}
+
 {% set isHomepage = (entry is defined ? entry.section.isHomepage() : false) %}
 
 {% if not craft.request.isAjax %}
