wysiwyg content is now wysiwyg

--- a/src/assets/scss/components/_wysiwyg.scss
+++ b/src/assets/scss/components/_wysiwyg.scss
@@ -1,7 +1,7 @@
 /*
-	WYSIWYG content.
+	WYSIWYG.
 	Custom type styles applied to wysiwyg content from the CMS.
 */
-.wysiwyg-content {
-	
+.wysiwyg {
+
 }
