--- a/src/assets/scss/_core/base/utils/_functions.scss
+++ b/src/assets/scss/_core/base/utils/_functions.scss
@@ -9,9 +9,9 @@ Asseses the darkness of a color & decides if the hover should be lighter or dark
 @function hover-picker($color) {
 
 	@if lightness($color) > 60 {
-		@return darken($color, 20);
+		@return shade($color, 20);
 	} @else {
-		@return lighten($color, 20);
+		@return tint($color, 20);
 	}
 
 }
@@ -45,38 +45,7 @@ Alternative to lighten and darken.
 
 
 /*
-Magic Number.
-Converts magic number pixel values to ems.
-*/
-@function magic-number($font-size: 16, $multiplier: 'm') {
-
-	@if ($multiplier == 'm') {
-		$multiplier: 1;
-	} @elseif ($multiplier == 'xs') {
-		$multiplier: 0.375;
-	} @elseif ($multiplier == 's') {
-		$multiplier: 0.625;
-	} @elseif ($multiplier == 'l') {
-		$multiplier: 2;
-	} @elseif ($multiplier == 'xl') {
-		$multiplier: 3;
-	} @elseif ($multiplier == 'xxl') {
-		$multiplier: 5;
-	}
-
-	@return ((($magic-number * $multiplier) / $font-size) * 1em);
-}
-
-
-
-
-
-
-
-
-
-/*
-Text Colour Picker
+Text Colour Picker.
 */
 @function text-color-picker($color) {
 
@@ -86,22 +55,6 @@ Text Colour Picker
 		@return $color-text-light;
 	}
 
-}
-
-
-
-
-
-
-
-
-
-/*
-Get Color
-Returns a specific theme colour from the map $theme.
-*/
-@function get-color($id, $theme) {
-	@return map-get(map-get($color-schemes, $id), $theme);
 }
 
 
