--- a/src/assets/scss/_core/core.scss
+++ b/src/assets/scss/_core/core.scss
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-@import "../../../../node_modules/normalize-scss/sass/_normalize.scss";
+@import "../../../../node_modules/normalize-scss/sass/normalize/_import-now";
 @import "../../../../node_modules/susy/sass/susy";
 @import 'base/__base';
 @import 'components/__components';
