--- a/src/assets/scss/_core/base/utils/_functions.scss
+++ b/src/assets/scss/_core/base/utils/_functions.scss
@@ -95,3 +95,19 @@ Converts pixels to relative units.
 @function px2percent($pixels, $base) {
 	@return ( $pixels / $base * 100%);
 }
+
+
+
+
+
+
+
+
+
+/*
+Get Color
+Returns a specific theme colour from the map $theme.
+*/
+@function get-color($id, $theme) {
+  @return map-get(map-get($color-schemes, $id), $theme);
+}
