--- a/src/assets/scss/components/_images.scss
+++ b/src/assets/scss/components/_images.scss
@@ -10,3 +10,31 @@ img {
 picture {
   display: block;
 }
+
+.full-bleed-image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+
+  picture {
+    width: 100%;
+    height: 100%;
+  }
+
+  img {
+    min-width: 100%;
+    max-width: none;
+    width: auto;
+
+    min-height: 100%;
+    max-height: none;
+    height: auto;
+
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
