--- a/src/assets/scss/base/project/_typography.scss
+++ b/src/assets/scss/base/project/_typography.scss
@@ -111,20 +111,20 @@ $type-sizes: ();
 
 
 
-
 h1, h2, h3 {
-    margin: 0;
-    font-weight: normal;
+  margin: 0;
+  font-weight: normal;
 }
 
 body {
-    -webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased;
 }
 
 a {
-    @include transition(color);
+  @include transition(color);
+  color: inherit;
 }
 
 li {
-    margin-bottom: 0.7em;
+  margin-bottom: 0.7em;
 }
