Added Noto defaults for fonts.

--- a/craft/templates/_layouts/default.html
+++ b/craft/templates/_layouts/default.html
@@ -1,8 +1,8 @@
 {% extends '_core/_layouts/default' %}
 
-{% set fonts = ['font-one', 'font-two'] %}
+{% set fonts = ['Noto Sans', 'Noto Serif'] %}
 
 {% set stylesheets = {
 	'mainStyles' : '/assets/css/main.css',
-	'fontStyles' : '/assets/css/fonts.css'
+	'fontStyles' : 'https://fonts.googleapis.com/css?family=Noto+Sans|Noto+Serif'
 } %}
