--- a/craft/templates/_core/_partials/components/picture.html
+++ b/craft/templates/_core/_partials/components/picture.html
@@ -53,6 +53,7 @@
 {# === /misc === #}
 
 {% if image %}
+
 	<picture class="{{ pictureClass }}">{% spaceless %}
 		<!--[if IE 9]><video style="display: none;"><![endif]-->
 
@@ -81,15 +82,20 @@
 			{% set width = image.getWidth(thisTransform) %}
 			{% set height = image.getHeight(thisTransform) %}
 
-			<source
-			{{ srcAttr }}="{% spaceless %}
-				{% for pixelRatio in pixelRatios|sort|reverse %}
-					{% set thisPRTransform = craft.JsonTransforms.getTransform(transform, key, pixelRatio) %}
-					{{ craft.imager.transformImage(image, thisPRTransform) }}{% if pixelRatio != 1 %} {{ pixelRatio }}x{% endif %}{% if not loop.last %}, {% endif %}
-				{% endfor %}"{% endspaceless %}
+			{% set formats = craft.imager.serverSupportsWebp() ? ['webp', '_default'] : ['_default'] %}
+			{% for f in formats %}
+				{% set overrides = (f != '_default') ? { 'format' : f } : null %}
+				<source
+				{{ srcAttr }}="{% spaceless %}
+					{% for pixelRatio in pixelRatios|sort|reverse %}
+						{% set thisPRTransform = craft.JsonTransforms.getTransform(transform, key, pixelRatio) %}
+						{{ craft.imager.transformImage(image, thisPRTransform, overrides) }}{% if pixelRatio != 1 %} {{ pixelRatio }}x{% endif %}{% if not loop.last %}, {% endif %}
+					{% endfor %}"{% endspaceless %}
 
-			{% if lazyLoad %}srcset="{{ craft.imager.base64Pixel(width, height, placeholderColor) }}"{% endif %}
-			media="(min-width: {{ value }})">
+				{% if lazyLoad %}srcset="{{ craft.imager.base64Pixel(width, height, placeholderColor) }}"{% endif %}
+				media="(min-width: {{ value }})"{% if f != '_default' %} type="image/{{ f }}"{% endif %}>
+			{% endfor %}
+
 		{% endfor %}
 
 		<!--[if IE 9]></video><![endif]-->
